<resources>
    <string name="app_name">RxExample</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open" translatable="false" />
    <string name="navigation_drawer_close" translatable="false" />

    <!--Basic Strings-->
    <string name="basic">Basic</string>
    <string name="create">Create</string>
    <string name="action">Action1</string>
    <string name="lambda">Lambda</string>
    <string name="chaining">Chaining</string>

    <!--Lifecycle Strings-->
    <string name="lifecycle_observable">RxLifecycle</string>
    <string name="leaking_subscription">Leaking Subscription</string>
    <string name="leaking_subscription_fixed">Leaking Subscription (Fixed)</string>
    <string name="explanation_leak">This activity should leak when you go back.</string>
     <string name="explanation_lifecycle">This activity should always auto-unsubscribe due to
        RxLifecycle\'s bindToLifecycle().</string>

    <!--Operators Strings-->
    <string name="operators">Operators</string>
    <string name="map">Map</string>
    <string name="map_emitting_diffrent_type">Map Emitting Different Type</string>
    <string name="from">From</string>
    <string name="buffer">Buffer</string>
    <string name="debounce">Debounce</string>
    <string name="flatmap_concatmap">flatMap() vs concatMap()</string>

    <!--Network Strings-->
    <string name="network">Network</string>
    <string name="retrofit">Retrofit</string>


    <string name="btn_text_flat_map">Observable.flatMap()</string>
    <string name="btn_text_concat_map">Observable.concatMap()</string>
    <string name="tv_label_original_order">Original stream order:\u0020</string>
    <string name="tv_label_flatMap">flatMap():\u0020</string>
    <string name="tv_label_flatMap_msg">Doesn\'t take care of the order</string>
    <string name="tv_label_flatMap_result">Result:\u0020</string>
    <string name="tv_label_concatMap">concatMap():\u0020</string>
    <string name="tv_label_concatMap_msg">Take care of the order</string>
    <string name="tv_label_concatMap_result">Result:\u0020</string>


    <string name="string_content_description">Non accessible view</string>
    <string name="string_sample_observable_transformation">See the difference between flatMap() and concatMap() whereas one take care of the order and the other does not.</string>


    <string name="drawer.operators">Operators</string>
    <string name="drawer.lifecycle">Lifecycle</string>
    <string name="class.title.flatmapvsconcatmap">FlatmapVsConcatmap</string>

</resources>
